<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity" >

    <TextView
        android:id="@+id/changePasslink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/forgotPasslink"
        android:layout_alignBottom="@+id/forgotPasslink"
        android:layout_alignLeft="@+id/etUserName"
        android:layout_alignStart="@+id/etUserName"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:onClick="changePassword"
        android:text="@string/changepass"
        android:textColor="#0000FF"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPass"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etPass"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" />

    <requestFocus />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" />

    <TextView
        android:id="@+id/forgotPasslink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnSingIn"
        android:layout_alignRight="@+id/btnSingIn"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:onClick="forgetPassword"
        android:text="@string/forgotpass"
        android:textColor="#0000FF"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/DefaultButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_default_bg"
        android:onClick="getSignUp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/btnSingIn"
        style="@style/DefaultButtonText"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignEnd="@+id/etPass"
        android:layout_alignLeft="@+id/etPass"
        android:layout_alignRight="@+id/etPass"
        android:layout_alignStart="@+id/etPass"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_default_bg"
        android:onClick="loginUser"
        android:text="@string/signin" />

</RelativeLayout>