<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SignUp" >

    <EditText
        android:id="@+id/label_un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/label_un"
        android:layout_alignLeft="@+id/phoneNo"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/label_un"
        android:layout_alignStart="@+id/phoneNo"
        android:layout_marginTop="38dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/user"
        android:drawableStart="@drawable/user"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" />

    <requestFocus />

    <EditText
        android:id="@+id/label_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_pw"
        android:layout_alignStart="@+id/label_pw"
        android:layout_below="@+id/label_un"
        android:layout_marginTop="26dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_pw"
        android:layout_alignStart="@+id/label_pw"
        android:layout_below="@+id/label_pw"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:ems="10"
        android:hint="@string/phoneno"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" >
    </EditText>

    <Button
        android:id="@+id/btnSingIn"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_default_bg"
        android:onClick="getUserSignUp"
        android:padding="10dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSingIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:onClick="forgetPassword"
        android:soundEffectsEnabled="true"
        android:text="@string/forgotpass"
        android:textColor="#0000FF"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/inviteCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/link"
        android:layout_alignEnd="@+id/btnSingIn"
        android:layout_alignRight="@+id/btnSingIn"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edittext_default_bg"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/invitecode"
        android:drawableStart="@drawable/invitecode"
        android:ems="10"
        android:hint="@string/invite"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" />

</RelativeLayout>