<com.idealyticapps.stoprape.adapter.MapWrapperLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:padding="@dimen/activity_margin"
    tools:context=".activity.Dashboard" >

    <Button
        android:id="@+id/logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/map"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/map"
        android:onClick="logout"
        android:text="@string/logout" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/logout"
        android:layout_alignBottom="@+id/logout"
        android:gravity="center"
        android:onClick="refresh"
        android:text="@string/refresh" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/refresh"
        android:layout_alignStart="@+id/refresh"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="45dp"
        class="com.google.android.gms.maps.MapFragment" />

    <Button
        android:id="@+id/helpButton"
        style="@style/DefaultButtonText"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_default_bg"
        android:onClick="helpMe"
        android:padding="10dp"
        android:text="@string/helpMe" />

</com.idealyticapps.stoprape.adapter.MapWrapperLayout>