<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.idealyticapps.stoprape.activity.ChangePassword" >

    <Button
        android:id="@+id/btnResetPass"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/button_default_bg"
        android:onClick="changePassword"
        android:padding="10dp"
        android:text="@string/changepass" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnResetPass"
        android:layout_alignEnd="@+id/btnResetPass"
        android:layout_alignRight="@+id/btnResetPass"
        android:layout_marginBottom="67dp"
        android:background="@drawable/edittext_default_bg"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/oldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPass"
        android:layout_alignEnd="@+id/btnResetPass"
        android:layout_alignLeft="@+id/newPass"
        android:layout_alignRight="@+id/btnResetPass"
        android:layout_alignStart="@+id/newPass"
        android:layout_marginBottom="39dp"
        android:background="@drawable/edittext_default_bg"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/current_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#cccccc" />

    <EditText
        android:id="@+id/userMailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/oldPass"
        android:layout_alignEnd="@+id/oldPass"
        android:layout_alignLeft="@+id/oldPass"
        android:layout_alignRight="@+id/oldPass"
        android:layout_alignStart="@+id/oldPass"
        android:layout_marginBottom="45dp"
        android:background="@drawable/edittext_default_bg"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email_reset"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#bbbbbb" />

</RelativeLayout>